Changelog
---------

Version 0.8.x
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

- Simplified the _escape function handling by pulling in the str call into the
  function. Corrected the bigtable hotshot test to only benchmark rendering.

- Replaced the cgi.escape function by an optimized local version, we go up
  to 11x for path and 16x for Python expressions :) In the bigtable benchmark
  the enhancement is more noticable - we are the same speed as spitfire -O1
  templates now and just half the speed of -O3 :))

- Added a new benchmark test called bigtable that produces results which are
  directly comparable to those produced by the bigtable.py benchmark in the
  spitfire project.

- Introduce a new config option called `Z3C_PT_DISABLE_I18N`. If this
  environment variable is set to `true`, the template engine will not call
  into the zope.i18n machinery anymore, but fall back to simple interpolation
  in all cases. In a normal Zope environment that has the whole i18n
  infrastructure set up, this will render the templates about 15x faster than
  normal TAL, instead of only 10x faster at this point.

- Removed the `second rendering` tests from the benchmark suite. Since we
  enable the file cache for the benchmarks, there's no difference between the
  first and second rendering anymore after the cache file has been written.

- Require zope.i18n 3.5 and add support for using its new negotiate function.
  If you use the `zope_i18n_allowed_languages` environment variable the target
  language for a template is only negotiated once per template, instead of
  once for each translate function call. This more than doubles the speed
  and the benchmark is back at 9.2 times faster.

- Extended the i18n handling to respect the passed in translation context to
  the template. Usually this is the request, which is passed on under the
  internal name of `_context` into the render functions. After extending the
  i18n tests to include a negotiator and message catalog the improvement is